devscripts (2.16.5) UNRELEASED; urgency=medium

  * uscan:
    + Import catfile from File::Spec::Functions to fix use of unqualified
      name.  Thanks to Craig Small for the patch.  (Closes: #823218)

 -- James McCoy <jamessan@debian.org>  Mon, 02 May 2016 19:41:06 -0400

devscripts (2.16.4) unstable; urgency=medium

  * mk-build-deps:
    + Only remove the deb after install if --remove was specified.
  * uscan:
    + Return early from process_watchline if no download or sig verification
      is taking place.  (Closes: #822233)

 -- James McCoy <jamessan@debian.org>  Sat, 23 Apr 2016 21:33:42 -0400

devscripts (2.16.3) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Fix regression in processing FTP listings when file pattern is the tail
      of another filename.  (Closes: #818727)
    + Handle trailing spaces on the watch line when determining whether the
      line specifies the version to check.  (Closes: #818865)
    + xip → xpi in the manpage.  (Closes: #819106)

  [ Paul Wise ]
  * Update chdist bash-completion file with the architectures currently
    (as of 2016-04-02) listed on buildd.debian.org
  * Support xz compressed files in dd-list

  [ Christoph Berg ]
  * origtargz: Clarify manpage about when the tarball is unpacked.
    (Closes: #820494)

 -- James McCoy <jamessan@debian.org>  Wed, 20 Apr 2016 21:18:30 -0400

devscripts (2.16.2) unstable; urgency=medium

  [ Osamu Aoki ]
  * uscan:
    + Print proper warnings for bad rules.  Closes: #814049
    + Fix glitches around rules such as "s<...> <...>g" and add their
      tests.
    + Reactivate --no-verbose mode.  Closes: #815645 
    + Fix --destdir for version 4.  Closes:#814686
    + Always use uscan_warn and uscan_die.
    + Die if the action script fails.  Closes: #810976
  * test_uscan:
    + Fix non-{Debian,Ubuntu} cases.  Closes: #816645
  * debsnap:
    + Add --list option.  Closes: #610048, #679763, #816910
  * manpage-alert:
    + Show package name etc.  Closes: #497320